--- a/dia3/treinos-course/cacau-trybe/package.json
+++ b/dia3/treinos-course/cacau-trybe/package.json
@@ -16,6 +16,8 @@
     "sinon": "11.1.1"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "cors": "^2.8.5",
+    "express": "4.17.1",
+    "morgan": "1.10.0"
   }
 }
