--- a/dia4/treino1/package.json
+++ b/dia4/treino1/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-async-errors": "3.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
 }
