--- a/dia5/trybecash-api/package.json
+++ b/dia5/trybecash-api/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "4.17.1",
+    "mysql2": "2.3.3",
     "nodemon": "^2.0.22"
   }
 }
