--- a/dia5/trybecash-api/package.json
+++ b/dia5/trybecash-api/package.json
@@ -15,5 +15,11 @@
     "express": "4.17.1",
     "mysql2": "2.3.3",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.0"
   }
 }
